--- a/views/index.ejs
+++ b/views/index.ejs
@@ -133,7 +133,7 @@
         <textarea name="mensaje" cols="30" rows="10">Escríbeme!</textarea>
     </div>
         <div class="boton"><input type="submit" value="Enviar"></div>
-        <div class="grupo">
+        <div id="html-element">
           <div class="g-recaptcha" data-sitekeys="6LeWo6QmAAAAAAaRPum8u18jsuLq32i6fMGI9PYj"></div>
         </div>
         <input  id="time" type="hidden" name="time" value="<$=datas.time$>">
