--- a/views/index.ejs
+++ b/views/index.ejs
@@ -138,6 +138,7 @@
         <textarea name="mensaje" cols="30" rows="10">Escríbeme!</textarea>
     </div>
         <div class="boton"><input type="submit" value="Enviar"></div>
+        <a target="_blanck" href="/login" class="">Ingresa al login</a>
         <div class="html-element">
           <div class="g-recaptcha" data-sitekeys="6LfW-6MmAAAAAMN3EM5lWfl_mAMpRWDfZ3LXtbcE"></div>
         </div>
